// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPagination DOM rendering renders correctly with custom renderTab func 1`] = `
<div>
  <ScrolledList
    alignItems="center"
    onItemClick={[Function]}
    renderItemContainer={[Function]}
    renderNextButton={[Function]}
    renderPrevButton={[Function]}
    scrollToItemMode="center"
    selected={0}
    showControls={true}
    step={2}
  >
    <div>
      Tab #
      0
    </div>
    <div>
      Tab #
      1
    </div>
  </ScrolledList>
  <div>
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`TabPagination DOM rendering renders correctly with custom renderTabList func 1`] = `
<div>
  <div>
    <div
      className="sel"
    >
      <div
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <strong />
      </div>
    </div>
    <div
      className="not_sel"
    >
      <div
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <strong>
          1
        </strong>
      </div>
    </div>
  </div>
  <div>
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`TabPagination DOM rendering renders correctly with default props 1`] = `
<div>
  <ScrolledList
    alignItems="center"
    onItemClick={[Function]}
    renderItemContainer={[Function]}
    renderNextButton={[Function]}
    renderPrevButton={[Function]}
    scrollToItemMode="center"
    selected={0}
    showControls={true}
    step={2}
  >
    
  </ScrolledList>
  <div />
</div>
`;

exports[`TabPagination DOM rendering renders correctly with many child items 1`] = `
<div>
  <ScrolledList
    alignItems="center"
    onItemClick={[Function]}
    renderItemContainer={[Function]}
    renderNextButton={[Function]}
    renderPrevButton={[Function]}
    scrollToItemMode="center"
    selected={0}
    showControls={true}
    step={2}
  >
    <div
      style={
        Object {
          "padding": 16,
        }
      }
    >
      <strong />
    </div>
    <div
      style={
        Object {
          "padding": 16,
        }
      }
    >
      <strong>
        1
      </strong>
    </div>
    <div
      style={
        Object {
          "padding": 16,
        }
      }
    >
      <strong>
        2
      </strong>
    </div>
    <div
      style={
        Object {
          "padding": 16,
        }
      }
    >
      <strong>
        3
      </strong>
    </div>
  </ScrolledList>
  <div>
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`TabPagination DOM rendering renders correctly with one child item 1`] = `
<div>
  <ScrolledList
    alignItems="center"
    onItemClick={[Function]}
    renderItemContainer={[Function]}
    renderNextButton={[Function]}
    renderPrevButton={[Function]}
    scrollToItemMode="center"
    selected={0}
    showControls={true}
    step={2}
  >
    <div
      style={
        Object {
          "padding": 16,
        }
      }
    >
      <strong />
    </div>
  </ScrolledList>
  <div>
    <div />
  </div>
</div>
`;

exports[`TabPagination DOM rendering renders correctly with selected item given arbitrary 1`] = `
<div>
  <ScrolledList
    alignItems="center"
    onItemClick={[Function]}
    renderItemContainer={[Function]}
    renderNextButton={[Function]}
    renderPrevButton={[Function]}
    scrollToItemMode="center"
    selected={1}
    showControls={true}
    step={2}
  >
    <div
      style={
        Object {
          "padding": 16,
        }
      }
    >
      <strong />
    </div>
    <div
      style={
        Object {
          "padding": 16,
        }
      }
    >
      <strong>
        1
      </strong>
    </div>
  </ScrolledList>
  <div>
    <div>
      2
    </div>
  </div>
</div>
`;
